@@ -14,6 +14,9 @@ Features
 Bug Handling
 ------------
 
+* Fix the message matcher parser to clear the yySymType structure on each call
+  (#1409).
+
 * Moved `SetSplitterRunner` out of the config's MakeRunner and into the
   `NewSplitterRunner` function to make sure a splitter always has access to a
   SplitterRunner if needed.
